fixing horizontal scrolling bar

--- a/style.css
+++ b/style.css
@@ -47,6 +47,7 @@ header {
 nav {
   display: flex;
   flex-direction: column;
+  box-sizing: border-box;
   align-items: center;
   font-weight: 100;
   font-family: "Lato", sans-serif;
